<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MenuTab</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="me">关于我</string>
    <string name="search">发现</string>
    <string name="more">更多</string>

</resources>