<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.0"
            android:visibility="gone" />

        <RadioGroup
            android:id="@+id/main_radio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/maintab_toolbar_bg"
            android:gravity="left"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/mainTabs_radio_home"
                style="@style/mainTabs_radio"
                android:button="@null"
                android:drawableTop="@drawable/chat_index_btn"
                android:text="@string/home"
                android:textColor="@drawable/tabhost_text_color" />

            <RadioButton
                android:id="@+id/mainTabs_radio_msg"
                style="@style/mainTabs_radio"
                android:button="@null"
                android:drawableTop="@drawable/chat_message_btn"
                android:text="@string/message"
                android:textColor="@drawable/tabhost_text_color" />

            <RadioButton
                android:id="@+id/mainTabs_radio_selfInfo"
                style="@style/mainTabs_radio"
                android:button="@null"
                android:drawableTop="@drawable/chat_me_btn"
                android:text="@string/me"
                android:textColor="@drawable/tabhost_text_color" />

            <RadioButton
                android:id="@+id/mainTabs_radio_square"
                style="@style/mainTabs_radio"
                android:button="@null"
                android:drawableTop="@drawable/chat_search_btn"
                android:text="@string/search"
                android:textColor="@drawable/tabhost_text_color" />

            <RadioButton
                android:id="@+id/mainTabs_radio_more"
                style="@style/mainTabs_radio"
                android:button="@null"
                android:drawableTop="@drawable/chat_more_btn"
                android:text="@string/more"
                android:textColor="@drawable/tabhost_text_color" />
        </RadioGroup>
    </LinearLayout>

</TabHost>